# MaxClique

./: .gitignore  CMakeLists.txt  Makefile  README.md  ewls.cpp  ewls.h  main.cpp  main.h  main_para.cpp  mis_solver.cpp  mis_solver.h  mvc_solver.cpp  mvc_solver.h  numvc.cpp  numvc.h
data/: frb30-15-1.mis.ans  frb30-15-1.mis.stat  frb30-15-2.mis.ans  frb30-15-2.mis.stat  frb30-15-3.mis.ans  frb30-15-3.mis.stat  frb30-15-4.mis.ans  frb30-15-4.mis.stat  frb30-15-5.mis.ans  frb30-15-5.mis.stat  frb35-17-1.mis.ans  frb35-17-1.mis.stat  frb35-17-2.mis.ans  frb35-17-2.mis.stat  frb35-17-3.mis.ans  frb35-17-3.mis.stat  frb35-17-4.mis.ans  frb35-17-4.mis.stat  frb35-17-5.mis.ans  frb35-17-5.mis.stat  frb40-19-1.mis.ans  frb40-19-1.mis.stat  frb40-19-2.mis.ans  frb40-19-2.mis.stat  frb40-19-3.mis.ans  frb40-19-3.mis.stat  frb40-19-4.mis.ans  frb40-19-4.mis.stat  frb40-19-5.mis.ans  frb40-19-5.mis.stat  frb45-21-1.mis.ans  frb45-21-1.mis.stat  frb45-21-2.mis.ans  frb45-21-2.mis.stat  frb45-21-3.mis.ans  frb45-21-3.mis.stat  frb45-21-4.mis.ans  frb45-21-4.mis.stat  frb45-21-5.mis.ans  frb45-21-5.mis.stat  (+44 more)
data/frb53-24-mis/: frb53-24-1.mis
data/frb56-25-mis/: frb56-25-2.mis  frb56-25-3.mis  frb56-25-4.mis
resources/: 实验班最大团作业(1).pptx
